--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ a:hover {
 }
 
 #input {
-  background-image: url('search.png');
+  background-image: url('search.svg');
   background-size: 20px;
   background-position: 10px 12px; /* Position the search icon */
   background-repeat: no-repeat; /* Do not repeat the icon image */
