--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ a:hover {
 
 hr {
     color: #555555;
+    display: block; 
+    height: 1px;
+    border: 0; 
+    border-top: 1px solid #555555;
 }
 
 #header {
