--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ hr {
   border-radius: 10px;
 }
 
-/* Hide the images by default */
+/* Hide the images by default 
 .mySlides {
   display: none;
 }
