--- a/style.css
+++ b/style.css
@@ -241,10 +241,10 @@ hr {
   border-radius: 10px;
 }
 
-/* Hide the images by default */
+/* Hide the images by default 
 .mySlides {
   display: none;
-}
+}*/
 
 /*#slide1 {
   display:block;
