--- a/style.css
+++ b/style.css
@@ -300,9 +300,9 @@ hr {
 
 /* Fading animation */
 .fade {
-  -webkit-animation-name: fade;
+  -webkit-animation-name: slide;
   -webkit-animation-duration: 1.5s;
-  animation-name: fade;
+  animation-name: slide;
   animation-duration: 1.5s;
 }
 
