--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ hr {
     border-top: 1px solid #555555;
 }
 
+#title {
+  font-size: 24px;
+}
+
 #header {
   background-color: #2e2e2e;
   font-size: 25px;
