--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ hr {
   font-size: 24px;
 }
 
+#download {
+  padding: 20px 20px 20px 20px;
+}
+
 #header {
   background-color: #2e2e2e;
   font-size: 25px;
