--- a/style.css
+++ b/style.css
@@ -40,8 +40,10 @@ hr {
   font-size: 24px;
 }
 
-#download {
+#button {
   padding: 20px 20px 20px 20px;
+  @extend #container;
+  @extend #highlight;
 }
 
 #header {
