--- a/style.css
+++ b/style.css
@@ -37,13 +37,22 @@ hr {
 }
 
 #title {
-  font-size: 24px;
+  font-size: 25px;
 }
 
 #button {
   padding: 20px 20px 20px 20px;
-  @extend #container;
-  @extend #highlight;
+  font-size: 25px;
+  text-align: center;
+  border: 2px solid #434343;
+  border-radius: 10px;
+  background-color: #2e2e2e;
+  transition: 0.2s;
+}
+
+#button:hover {
+  background-color: #434343;
+  transition: 0.2s;
 }
 
 #header {
