--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ hr {
   font-size: 25px;
 }
 
+#subtitle {
+  font-size: 23px;
+}
+
 #button {
   padding: 15px 15px 15px 15px;
   font-size: 25px;
