--- a/style.css
+++ b/style.css
@@ -350,16 +350,16 @@ hr {
   background: #f5f5f5;
 }
 
-.spoiler>div {
+.spoiler > div {
   margin: 5px;
   overflow: hidden;
   transition: all 1s ease;
 }
 
 .spoilerbutton[value="Show"]+.spoiler>div {
-  max-height: 0;
+  max-height: 0px;
 }
 
 .spoilerbutton[value="Hide"]+.spoiler>div {
-  max-height: 90px; /*use a big value here*/
+  max-height: auto; /*use a big value here*/
 }
