--- a/style.css
+++ b/style.css
@@ -342,8 +342,8 @@ hr {
 
 .spoilerbutton {
   display: block;
-  margin: 5px 0;
-  padding-top: 20px;
+  margin-bottom: 5px;
+  margin-top: 25px;
 }
 
 .spoiler {
