--- a/style.css
+++ b/style.css
@@ -347,13 +347,13 @@ hr {
   display: block;
   margin-bottom: 5px;
   margin-top: 25px;
+  padding-left: 25px;
 }
 
 .spoiler {
   overflow: hidden;
   background-color: #2e2e2e;
   border-radius: 5px;
-  display: none;
 }
 
 .spoiler > div {
@@ -364,10 +364,8 @@ hr {
 
 .spoilerbutton[value="Show"]+.spoiler>div {
   max-height: 0px;
-  display: none;
 }
 
 .spoilerbutton[value="Hide"]+.spoiler>div {
   max-height: auto; /*use a big value here*/
-  display: block;
 }
