--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ hr {
 
 #button {
   padding: 15px 15px 15px 15px;
+  font-size: 25px;
   text-align: center;
   border: 2px solid #434343;
   border-radius: 10px;
@@ -347,6 +348,12 @@ hr {
   margin-bottom: 5px;
   margin-top: 25px;
   font-size: 20px;
+  background-color: #2e2e2e;
+  color: #cecece;
+}
+
+.spoilerbutton:hover {
+  background-color: #434343;
 }
 
 .spoiler {
@@ -364,8 +371,10 @@ hr {
 
 .spoilerbutton[value="Show"]+.spoiler>div {
   max-height: 0px;
+  transition: 0.2s;
 }
 
 .spoilerbutton[value="Hide"]+.spoiler>div {
-  max-height: auto; /*use a big value here*/
+  max-height: auto;
+  transition: 0.2s;
 }
