--- a/style.css
+++ b/style.css
@@ -352,11 +352,13 @@ hr {
   color: #cecece;
   border: 2px solid #434343;
   border-radius: 5px;
+  transition: 0.2s;
 }
 
 .spoilerbutton:hover {
   background-color: #434343;
   cursor: pointer;
+  transition: 0.2s;
 }
 
 .spoiler {
