--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ hr {
   border: 2px solid #434343;
   border-radius: 10px;
   background-color: #2e2e2e;
-  width: 500px;
+  max-width: 500px;
   transition: 0.2s;
 }
 
