--- a/style.css
+++ b/style.css
@@ -434,6 +434,7 @@ hr {
   display: block;
   width: 80%;
   max-width: 700px;
+  max-height: 80%;
 }
 
 /* Caption of Modal Image (Image Text) - Same Width as the Image */
