--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body {
   padding: 0;
   text-align: justify;
   height: 100%;
+}
+
+#header, #banner, #content, #footer {
   max-width: 1250px;
 }
 
