--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@ body {
   height: 100%;
 }
 
-p, h1, hr {
+/*p, h1, hr {
   max-width: 1250px;
   margin: auto;
-}
+}*/
 
 a {
   text-decoration: none;
