--- a/style.css
+++ b/style.css
@@ -16,11 +16,11 @@ body {
   height: 100%;
 }
 
-@media (max-width: 450px) {
+@media only screen and (max-width: 450px) {
 
 body {font-size: 50px;}
 
-.closebtn {display: none;}
+.closebtn {display: block;}
 
 }
 
