--- a/style.css
+++ b/style.css
@@ -16,16 +16,6 @@ body {
   height: 100%;
 }
 
-@media only screen and (max-width: 450px) {
-
-body {font-size: 50px;}
-
-.closebtn {display: block;}
-
-}
-
-.closebtn {display: none;}
-
 #content {
   max-width: 1300px;
   margin: auto;
@@ -497,3 +487,48 @@ hr {
   .modal-content {
     width: 100%;
   }
+
+
+/* Mobile */
+
+@media only screen and (max-width: 450px) {
+
+body {font-size: 50px;}
+
+.menu {
+  display: inline-block;
+  cursor: pointer;
+}
+
+}
+
+/* Mobile Menu Button */
+
+.menu {
+  display: none;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #fff;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+/* Rotate first bar */
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+  transform: rotate(-45deg) translate(-9px, 6px) ;
+}
+
+/* Fade out the second bar */
+.change .bar2 {
+  opacity: 0;
+}
+
+/* Rotate last bar */
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+  transform: rotate(45deg) translate(-8px, -8px) ;
+}
