--- a/style.css
+++ b/style.css
@@ -95,19 +95,19 @@ hr {
   list-style-type: none;
 }
 
-#sub_header > li, overlay-content > li {
+#sub_header > li, .overlay-content > li {
   display: inline-block; 
   transition: all .2s linear; 
   padding: 10px 20px 10px 20px;
 }
 
-#sub_header > li > a, overlay-content > li > a {
+#sub_header > li > a, .overlay-content > li > a {
   color: #FFF; 
   display: block; 
   transition: 0.2s;
 }
 
-#sub_header > li:hover, overlay-content > li:hover {
+#sub_header > li:hover, .overlay-content > li:hover {
   color: #FFF; 
   background-color: #434343; 
   transition: 0.2s; 
@@ -493,7 +493,7 @@ hr {
 
 @media only screen and (max-width: 450px) {
 
-body {font-size: 50px;}
+body {font-size: 30px;}
 
 .menu {
   display: inline-block;
