--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   background-color: #1e1e1e;
   color: #cecece;
   font-family: "Segoe UI", Tahoma, Helvetica, Arial, Verdana, sans-serif;
-  font-size: 20px;             
+  font-size: 20px;           
   margin: 0;
   padding: 0;
   text-align: justify;
@@ -498,6 +498,10 @@ body {font-size: 30px;}
 .menu {
   display: inline-block;
   cursor: pointer;
+}
+
+#content {
+  padding: 0;
 }
 
 .overlay-content {display: none;}
