--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ hr {
   list-style-type: none;
 }
 
-#sub_header li, #subheader .overlay_content {
+#sub_header li, #subheader .overlay_content li {
   display: inline-block; 
   transition: all .2s linear; 
   padding: 10px 20px 10px 20px;
