--- a/style.css
+++ b/style.css
@@ -513,6 +513,11 @@ hr {
   display: none;
 }*/
 
+.menu {
+  display: block;
+  cursor: pointer;
+}
+
 .bar1, .bar2, .bar3 {
   width: 35px;
   height: 5px;
