--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ hr {
 #sub_header {
   margin: 0; 
   list-style-type: none;
+  float: left;
 }
 
 #sub_header li, #subheader .overlay_content li {
