--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ hr {
   float: left;
 }
 
-#sub_header li, #subheader .overlay_content li {
+#sub_header li, #sub_header .overlay_content li {
   display: inline-block; 
   transition: all .2s linear; 
   padding: 10px 20px 10px 20px;
