--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ hr {
   list-style-type: none;
 }
 
-#sub_header li, #sub_header div {
+#sub_header li, #sub_header .menu, #sub_header .overlay_content{
   display: inline-block; 
   transition: all .2s linear; 
   padding: 10px 20px 10px 20px;
@@ -503,7 +503,7 @@ hr {
   margin: 0;
 }
 
-.overlay-content {display: none;}
+.overlay_content {display: none;}
 
 }
 
