--- a/style.css
+++ b/style.css
@@ -101,6 +101,10 @@ hr {
   padding: 10px 20px 10px 20px;
 }
 
+.overlay_content {
+  padding: 0;
+}
+
 #sub_header li > a {
   color: #FFF; 
   display: block; 
