--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ hr {
   background-color: #2e2e2e;
   font-size: 25px;
   padding: 5px 20px 5px 20px; /*top right bottom left*/
+  border-bottom: 1px solid #555555;
 }
 
 #logo {
@@ -130,7 +131,6 @@ hr {
   background-image: url("banner.jpg");
   background-size: cover; /*fa sì che un immagine in bg copra l'intero div*/
   padding: 80px 0px 80px 60px; 
-  border-top: 1px solid #555555;
 }
 
 #content {
