--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   font-size: 20px;           
   margin: 0;
   padding: 0;
-  text-align: justify;
+  /*text-align: justify;*/
   height: 100%;
 }
 
