--- a/style.css
+++ b/style.css
@@ -494,14 +494,13 @@ hr {
   }
 
 
+.menu {
+  display: none;
+}
+
 /* Mobile */
 
 @media only screen and (max-width: 450px) {
-
-.menu {
-  display: inline-block;
-  cursor: pointer;
-}
 
 #sub_header img {
   margin-bottom: -5px;
@@ -512,15 +511,16 @@ hr {
   margin: 0;
 }
 
-.overlay_content {display: none;}
+.overlay_content {
+  display: none;
+}
 
+.menu {
+  display: inline-block;
+  cursor: pointer;
 }
 
 /* Mobile Menu Button */
-
-.menu {
-  display: none;
-}
 
 .bar1, .bar2, .bar3 {
   width: 25px;
@@ -546,3 +546,6 @@ hr {
   -webkit-transform: rotate(45deg) translate(0px, -11px);
   transform: rotate(45deg) translate(0px, -11px);
 }
+
+}
+
