--- a/queries.css
+++ b/queries.css
@@ -2,6 +2,10 @@
 
 @media only screen and (max-width: 450px) {
 
+#sub_header img {
+  margin-bottom: 0px;
+}
+
 #content, #banner {
   padding: 10%;
   margin: 0;
