--- a/queries.css
+++ b/queries.css
@@ -29,8 +29,11 @@
   width: 25px;
   height: 4px;
   background-color: #fff;
-  margin: 5px 0;
   transition: 0.4s;
+}
+
+.bar2, .bar3 {
+  margin: 5px 0;
 }
 
 /* Rotate first bar */
