--- a/queries.css
+++ b/queries.css
@@ -17,10 +17,6 @@
 
 /* Mobile Menu */
 
-li .menu {
-  margin-top: 5px;
-}
-
 .menu {
   display: inline-block;
   cursor: pointer;
@@ -35,6 +31,10 @@ li .menu {
   margin: 6px 0;
   background-color: #fff;
   transition: 0.4s;
+}
+
+.bar3 {
+  margin-bottom: 5px;
 }
 
 /* Rotate first bar */
