--- a/queries.css
+++ b/queries.css
@@ -41,7 +41,7 @@
 .change .bar1 {
   -webkit-transform: rotate(-45deg) translate(0px, 13px);
   transform: rotate(-45deg) translate(0px, 13px);
-  transform: translateX(-5px);
+  padding-right: 10px;
 }
 
 /* Fade out the second bar */
@@ -53,7 +53,7 @@
 .change .bar3 {
   -webkit-transform: rotate(45deg) translate(0px, -14px);
   transform: rotate(45deg) translate(0px, -14px);
-  transform: translateX(-5px);
+  padding-right: 10px;
 }
 
 }
