--- a/queries.css
+++ b/queries.css
@@ -54,6 +54,8 @@
   transform: rotate(45deg) translate(0px, -14px);
 }
 
+/* Overwrite styles on devices with no hover capabilities */
+
 @media (hover: none) {
   #sub_header li:hover { 
     background-color: transparent;
