--- a/queries.css
+++ b/queries.css
@@ -2,7 +2,7 @@
 
 @media only screen and (max-width: 1280px) {
 
-#sub_header img {
+.sub_header img {
   margin-bottom: 0px;
 }
 
@@ -57,7 +57,7 @@
 /* Overwrite styles on devices with no hover capabilities */
 
 @media (hover: none) {
-  #sub_header li:hover { 
+  .sub_header li:hover { 
     background-color: inherit;
     transition: 0s;
   }
