--- a/style.css
+++ b/style.css
@@ -91,12 +91,12 @@ hr {
   height: auto;
 }
 
-#sub_header {
+.sub_header {
   margin: 0; 
   list-style-type: none;
 }
 
-#sub_header li{
+.sub_header li{
   display: inline-block; 
   transition: all .2s linear; 
   padding: 10px 20px 10px 20px;
@@ -106,20 +106,20 @@ hr {
   display: inline-block;
 }
 
-#sub_header li > a {
+.sub_header li > a {
   color: #FFF; 
   display: block; 
   transition: 0.2s;
 }
 
-#sub_header li:hover {
+.sub_header li:hover {
   color: #FFF; 
   background-color: #434343; 
   transition: 0.2s; 
   border-radius: 3px;
 }
 
-#sub_header img {
+.sub_header img {
   margin-bottom: -5px;
   width: 25px;
   height: auto;
@@ -130,7 +130,7 @@ hr {
   text-shadow: 2px 2px #595959;
   background-image: url("banner.jpg");
   background-size: cover; /*fa sì che un immagine in bg copra l'intero div*/
-  padding: 40px 0px 80px 0px; 
+  padding: 40px 0px 80px 0px;  /*80px 60px 80px 60px*/
 }
 
 #content {
