--- a/queries.css
+++ b/queries.css
@@ -1,6 +1,6 @@
 /* Mobile */
 
-@media /*only screen and*/ (max-width: 1280px) {
+@media only screen and (max-width: 1280px) {
 
 #sub_header img {
   margin-bottom: 0px;
