--- a/queries.css
+++ b/queries.css
@@ -19,14 +19,23 @@
   display: none;
 }
 
-#sub_header li {
-  -webkit-tap-highlight-color: #434343;
-  transition: 0s;
+@media not all and (min-resolution:.001dpcm) { 
+    @media {
+        .safari10 { 
+            #sub_header li {
+              -webkit-tap-highlight-color: #434343; /* As the :active pseudoclass doesn't work on safari */
+              transition: 0s;
+              border-radius: 3px;
+            }
+        }
+    }
 }
 
-#sub_header li:active {
-  color: #FFF; 
-  background-color: #434343; 
+
+
+#sub_header li:hover {
+  background-color: #434343; /* As the :active pseudoclass doesn't work on safari */
+  transition: 0s;
   border-radius: 3px;
 }
 
