--- a/queries.css
+++ b/queries.css
@@ -33,7 +33,7 @@
 
 
 
-#sub_header li:hover {
+#sub_header li:active {
   background-color: #434343; /* As the :active pseudoclass doesn't work on safari */
   transition: 0s;
   border-radius: 3px;
