--- a/style.css
+++ b/style.css
@@ -102,9 +102,9 @@ hr {
   padding: 10px 20px 10px 20px;
 }
 
-.overlay_content {
+/*.overlay_content {
   display: inline-block;
-}
+}*/
 
 #sub_header li > a {
   color: #FFF; 
