--- a/queries.css
+++ b/queries.css
@@ -78,6 +78,7 @@
   /* Height & width depends on how you want to reveal the overlay (see JS below) */   
   height: 0;
   width: 100%;
+  margin-top: 70px;
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   left: 0;
