--- a/queries.css
+++ b/queries.css
@@ -93,6 +93,8 @@
   position: relative;
   /*top: 25%; /* 25% from the top */
   width: 100%; /* 100% width */
+  left: 50%;
+  transform: translateX(-50%);
   text-align: center; /* Centered text/links */
   margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
 }
