--- a/queries.css
+++ b/queries.css
@@ -84,7 +84,7 @@
   left: 0;
   top: 0;
   background-color: #1e1e1e; /* Black fallback color */
-  overflow-x: hidden; /* Disable horizontal scroll */
+  /*overflow-x: hidden; /* Disable horizontal scroll */
   transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
 }
 
@@ -93,14 +93,12 @@
   position: relative;
   /*top: 25%; /* 25% from the top */
   width: 100%; /* 100% width */
-  left: 50%;
-  transform: translateX(-50%);
+  text-align: center;
   margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
-  display: block;
 }
 
 .overlay_content li {
-
+  width: 100%;
   border-bottom: 1px solid #555555;
 }
 
