--- a/queries.css
+++ b/queries.css
@@ -103,7 +103,7 @@
 }
 
 /* The navigation links inside the overlay */
-.overlay a {
+.overlay li a {
   padding: 8px;
   text-decoration: none;
   font-size: 36px;
