--- a/queries.css
+++ b/queries.css
@@ -117,6 +117,10 @@
   color: #f1f1f1;
 }
 
+.vertical_disable {
+  overflow-y: hidden;
+}
+
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 @media screen and (max-height: 450px) {
   .overlay a {font-size: 20px}
