--- a/queries.css
+++ b/queries.css
@@ -94,7 +94,7 @@
   /*top: 25%; /* 25% from the top */
   width: 100%; /* 100% width */
   /*text-align: center;*/
-  margin-top: 15px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+  padding-top: 15px; /* 30px top margin to avoid conflict with the close button on smaller screens */
   border-top: 1px solid #555555;
 }
 
