--- a/queries.css
+++ b/queries.css
@@ -125,4 +125,9 @@
   .overlay a {font-size: 20px}
 } 
 
+.closebtn {
+  -webkit-transform: translate(-3px, -2px);
+  transform: translate(-3px, -2px);
+}
+
 }
