--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ hr {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1; /*set the overlap level*/
   right: 0;
-  margin-top: 20px;
+  margin-top: 40px;
   margin-right: -20px;
   border-radius: 3px;
   font-size: 22px;
@@ -272,11 +272,15 @@ hr {
 
 .closebtn {
   display: none;
-  font-size: 40px;
-  font-style: bold;
+  font-size: 46px;
+  max-height: 45px;
+  font-weight: 600;
   color: #fff;
   cursor: pointer;
-  margin-top: -5px;
+  line-height: 15px;
+  max-width: 25px;
+  -webkit-transform: translate(-3px, 1.5px);
+  transform: translate(-3px, 1.5px);
 }
 
 /* Show the dropdown menu (JS) */
