--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ hr {
   padding: 40px 0px 20px 0px;  /*80px 60px 80px 60px*/
 }
 
-#content {
+.content {
   padding: 40px 80px 0 80px;
   box-sizing: border-box;
   min-height: 100%;
