--- a/queries.css
+++ b/queries.css
@@ -6,6 +6,10 @@
   margin-bottom: 0px;
 }
 
+#header {
+  padding: 5px 20px 5px 20px;
+}
+
 .content, #banner {
   padding: 10% 5% 10% 5%;
   margin: 0;
