--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html {
   scroll-behavior: smooth;
   box-sizing: border-box;
   height: 100%;
+  touch-action: manipulation; /* Remove 300ms tap delay */
   /*image-rendering: -webkit-optimize-contrast; /* fix downscale blurryness in Chrome */
 }
 
