--- a/style.css
+++ b/style.css
@@ -285,6 +285,14 @@ hr {
   transform: translate(-3px, 1.5px);*/
 }
 
+.bar1, .bar2, .bar3 {
+  width: 25px;
+  height: 4px;
+  margin: 6px 0;
+  background-color: #fff;
+  transition: 0.4s;
+}
+
 .change .bar1 {
   -webkit-transform: rotate(-45deg) translate(0px, 14px);
   transform: rotate(-45deg) translate(0px, 14px);
