--- a/style.css
+++ b/style.css
@@ -91,6 +91,12 @@ hr {
 #logo img {
   width: 70px;
   height: auto;
+  transition: 0.3s;
+}
+
+#logo img:hover {
+  filter: drop-shadow(0px 0px 4px rgba(255, 255, 255, 0.5));
+  transition: 0.3s;
 }
 
 #sub_header {
