--- a/style.css
+++ b/style.css
@@ -448,7 +448,7 @@ hr {
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 3; /* Sit on top */
   padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
@@ -522,4 +522,19 @@ hr {
 
 .vertical_disable {
   overflow-y: hidden;
+}
+
+/* Scroll Button */
+#scrollButton {
+  display: none;
+  position: fixed;
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 4;
+  border-radius: 10px;
+  background-color: rgba(255,255,255,0.5); /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  font-size: 18px; /* Increase font size */
 }
