--- a/style.css
+++ b/style.css
@@ -532,9 +532,8 @@ hr {
   right: 30px; /* Place the button 30px from the right */
   z-index: 4;
   border-radius: 10px;
-  background-color: rgba(255,255,255,0.5); /* Set a background color */
-  color: white; /* Text color */
+  background-color: rgba(255,255,255,0.3); /* Set a background color */
   cursor: pointer; /* Add a mouse pointer on hover */
   padding: 15px; /* Some padding */
-  font-size: 18px; /* Increase font size */
+  max-width: 40px;
 }
