--- a/queries.css
+++ b/queries.css
@@ -139,7 +139,7 @@
 
 @media (hover: none) {
   #sub_header li:hover { 
-    background-color: inherit;
+    background-color: transparent;
     transition: 0s;
   }
 }
