--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
   scroll-behavior: smooth;
   box-sizing: border-box;
-  height: 100%;
+  max-height: 100%;
   touch-action: manipulation; /* Remove 300ms tap delay */
   /*image-rendering: -webkit-optimize-contrast; /* fix downscale blurryness in Chrome */
 }
@@ -14,7 +14,7 @@ body {
   margin: 0;
   padding: 0;
   /*text-align: justify;*/
-  height: 100%;
+  max-height: 100%;
 }
 
 .content {
