--- a/style.css
+++ b/style.css
@@ -146,8 +146,8 @@ hr {
   padding: 40px 40px 0 40px;
   box-sizing: border-box;
   min-height: 100%;
-  height: auto !important;
-  height: 100%;
+  /*height: auto !important;
+  height: 100%;*/
   padding-bottom: 60px;
 }
 
