--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
   scroll-behavior: smooth;
   box-sizing: border-box;
-  max-height: 100%;
+  /*max-height: 100%;*/
   touch-action: manipulation; /* Remove 300ms tap delay */
   /*image-rendering: -webkit-optimize-contrast; /* fix downscale blurryness in Chrome */
 }
@@ -14,7 +14,7 @@ body {
   margin: 0;
   padding: 0;
   /*text-align: justify;*/
-  max-height: 100%;
+  /*max-height: 100%;*/
 }
 
 .content {
@@ -145,9 +145,7 @@ hr {
 .content {
   padding: 40px 40px 0 40px;
   box-sizing: border-box;
-  min-height: 100%;
-  /*height: auto !important;
-  height: 100%;*/
+  /*min-height: 100%;*/
   padding-bottom: 60px;
 }
 
