--- a/style.css
+++ b/style.css
@@ -539,3 +539,18 @@ hr {
   background-color: rgba(255,255,255,0.2);
   transition: 0.2s;
 }
+
+.scrollAppear {
+  display: block;
+  animation: fadeIn 0.5s;
+}
+
+@-webkit-keyframes fadeIn {
+  from {opacity: 0}
+  to {opacity: 1}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0}
+  to {opacity: 1}
+}
