--- a/style.css
+++ b/style.css
@@ -549,11 +549,11 @@ hr {
 }
 
 @-webkit-keyframes fadeIn {
-  from {opacity: 0}
-  to {opacity: 1}
+  0% {opacity: 0}
+  100% {opacity: 1}
 }
 
 @keyframes fadeIn {
-  from {opacity: 0}
-  to {opacity: 1}
+  0% {opacity: 0}
+  100% {opacity: 1}
 }
