--- a/style.css
+++ b/style.css
@@ -545,7 +545,7 @@ hr {
 }
 
 .scrollHide {
-  animation: fadeIn 0.5s linear backwards;
+  animation: fadeIn 0.5s linear reverse;
 }
 
 @-webkit-keyframes fadeIn {
