--- a/style.css
+++ b/style.css
@@ -176,7 +176,6 @@ hr {
   background-color: #2e2e2e;
   padding: 15px 60px 15px 60px;
   margin: auto;
-  /*float: left;*/
 }
 
 #footer a {
@@ -195,7 +194,8 @@ hr {
 }
 
 .affiliated {
-  padding-right: 400px
+  padding-right: 550px;
+  padding-left: 5px;
 }
 
 #input {
