--- a/style.css
+++ b/style.css
@@ -187,15 +187,8 @@ hr {
 }
 
 .github {
-  width: 15px;
+  width: 25px;
   height: auto;
-  margin-bottom: -2px;
-  padding-left: 8px;
-}
-
-.affiliated {
-  padding-right: 550px;
-  padding-left: 5px;
 }
 
 #input {
@@ -506,8 +499,7 @@ hr {
   transition: 0.3s;
 }
 
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
   color: #bbb;
   text-decoration: none;
   cursor: pointer;
