--- a/style.css
+++ b/style.css
@@ -174,8 +174,10 @@ hr {
   font-size: 15px;
   color: #b8b8b8;
   background-color: #2e2e2e;
+}
+
+#footer td {
   padding: 15px 60px 15px 60px;
-  /*text-align:center; /*margin: auto; doesn't work with inline elements*/
 }
 
 #footer a {
